--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -33,12 +33,16 @@ section {
         margin-right: 0 !important;
     }
     .card {
+        border: 1px solid $C1;
+        box-shadow: 0 1px 2px $C1;
         padding: 5px;
         margin-bottom: 10px;
         width: 390px;
         height: 300px;
         margin: 10px;
         .card-title {
+            background-color: $C2;
+            z-index: 2;
             font-size: 12.5px;
             width: 245px;
             border-bottom: solid 1px $C1;
@@ -46,19 +50,20 @@ section {
             box-shadow: 0 1px 5px $C1;
         }
         .card-img-top {
-            padding: 5px;
-            height: 100px;
-            filter: drop-shadow(5px 5px 5px #222);
+            z-index: 2;
+            position: absolute;
+            width: 35%;
+            right: 5px;
+            top: 55px;
             margin: auto auto;
         }
         .badge {
-            height: 20px;
+            z-index: 1;
+            height: 100%;
             position: absolute;
             width: 150px;
-            top: 5px;
+            top: 0;
             right: 0;
-            background: $C1;
-            color: $C2;
         }
         .generateur {
             z-index: 2;
@@ -77,11 +82,45 @@ section {
             background-color: $C2;
         }
         a {
+            z-index: 2;
             position: absolute;
             bottom: 5px;
+            left: 0;
+            width: 100%;
+            background-color: $C3;
+            color: $C2;
+            text-align: center;
+            box-shadow: 0 1px 2px $C1;
+            text-decoration: none;
+            &:hover {
+                bottom: 3px;
+                box-shadow: 0 1px 0 $C1;
+                text-shadow: 0 1px 0 $C1;
+            }
         }
         .card-body {
             height: 200px;
+            .card-text {
+                display: flex;
+                flex-direction: column;
+                justify-content: center;
+                bottom: 0;
+                left: 0;
+                text-align: center;
+                height: 260px;
+                width: 62%;
+                background-color: rgba(0, 0, 0, 0.075);
+                position: absolute;
+                z-index: 2;
+                text-shadow: $C2 1px 1px, $C2 -1px 1px, $C2 -1px -1px, $C2 1px -1px;
+                span {
+                    vertical-align: middle;
+                    &::selection {
+                        color: $C1;
+                        background-color: rgba(0, 119, 255, 0.479);
+                    }
+                }
+            }
         }
     }
 }
@@ -101,4 +140,43 @@ footer {
         text-align: left;
         height: 35px;
     }
+}
+
+// Les badges
+.js {
+    background-color: rgb(251, 255, 0);
+    color: $C1;
+}
+
+.css {
+    background-color: rgb(255, 0, 0);
+    color: $C2;
+}
+
+.html {
+    background-color: rgb(17, 0, 255);
+    color: $C2;
+}
+
+.bootstrap {
+    background-color: rgb(5, 0, 73);
+    color: $C2;
+}
+
+.wp {
+    background-color: rgb(0, 176, 230);
+    color: $C2;
+    font-weight: bold;
+}
+
+.react {
+    background-color: #62dafb;
+    color: $C2;
+    text-shadow: 0 1px 1px $C1;
+}
+
+.php {
+    background-color: #9062fb;
+    color: $C1;
+    text-shadow: 0 0 1px $C2;
 }
