--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -1,123 +1,381 @@
 $C1:black;
 $C2:white;
 $C3:rgba(0, 162, 216, 1);
-section {
-    width: 95%;
-    margin: auto auto;
-    height: 495px;
-    padding: 10px;
-    overflow-y: scroll;
-    margin-bottom: 25px;
-    &::-webkit-scrollbar {
-        width: 45px;
-    }
-    &::-webkit-scrollbar-track {
-        box-shadow: inset 0 0 5px $C1;
-        border-radius: 10px;
-    }
-    &::-webkit-scrollbar-track-piece {
-        background-image: linear-gradient(90deg, $C3 0%, $C2 55%, $C3 100%);
-        border-radius: 10px;
-    }
-    &::-webkit-scrollbar-thumb {
-        background-image: linear-gradient(90deg, $C3 0%, $C2 55%, $C3 100%);
-        border-radius: 10px;
-        box-shadow: inset 2px 0px 10px $C1;
-        transition: background-image 1.5s;
-        &:hover {
-            background-image: linear-gradient(90deg, $C2 0%, $C3 55%, $C2 100%);
-            box-shadow: inset -2px 0px 10px $C1;
+@media (min-width: 916px) {
+    section {
+        width: 95%;
+        margin: auto auto;
+        height: 495px;
+        padding: 10px;
+        overflow-y: scroll;
+        margin-bottom: 25px;
+        &::-webkit-scrollbar {
+            width: 45px;
         }
-    }
-    .row {
-        margin-right: 0 !important;
-    }
-    .card {
-        border: 1px solid $C1;
-        box-shadow: 0 1px 2px $C1;
-        padding: 5px;
-        margin-bottom: 10px;
-        width: 390px;
-        height: 300px;
-        margin: 10px;
-        .card-title {
-            background-color: $C2;
-            z-index: 2;
-            font-size: 12.5px;
-            width: 245px;
-            border-bottom: solid 1px $C1;
-            border-right: solid 2px $C1;
-            box-shadow: 0 1px 5px $C1;
+        &::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 5px $C1;
+            border-radius: 10px;
         }
-        .card-img-top {
-            z-index: 2;
-            position: absolute;
-            width: 35%;
-            right: 5px;
-            top: 55px;
-            margin: auto auto;
+        &::-webkit-scrollbar-track-piece {
+            background-image: linear-gradient(90deg, $C3 0%, $C2 55%, $C3 100%);
+            border-radius: 10px;
         }
-        .badge {
-            z-index: 1;
-            height: 100%;
-            position: absolute;
-            width: 150px;
-            top: 0;
-            right: 0;
-        }
-        .generateur {
-            z-index: 2;
-            white-space: nowrap;
-            vertical-align: baseline;
-            height: 20px;
-            position: absolute;
-            width: 150px;
-            top: 25px;
-            right: 0;
-            border: solid 1px $C1;
-            border-left: solid 2px $C1;
-            text-align: center;
-            vertical-align: middle;
-            font-size: 12px;
-            background-color: $C2;
-        }
-        a {
-            z-index: 2;
-            position: absolute;
-            bottom: 5px;
-            left: 0;
-            width: 100%;
-            background-color: $C3;
-            color: $C2;
-            text-align: center;
-            box-shadow: 0 1px 2px $C1;
-            text-decoration: none;
+        &::-webkit-scrollbar-thumb {
+            background-image: linear-gradient(90deg, $C3 0%, $C2 55%, $C3 100%);
+            border-radius: 10px;
+            box-shadow: inset 2px 0px 10px $C1;
+            transition: background-image 1.5s;
             &:hover {
-                bottom: 3px;
-                box-shadow: 0 1px 0 $C1;
-                text-shadow: 0 1px 0 $C1;
+                background-image: linear-gradient(90deg, $C2 0%, $C3 55%, $C2 100%);
+                box-shadow: inset -2px 0px 10px $C1;
             }
         }
-        .card-body {
-            height: 200px;
-            .card-text {
-                display: flex;
-                flex-direction: column;
-                justify-content: center;
-                bottom: 0;
-                left: 0;
-                text-align: center;
-                height: 260px;
-                width: 62%;
-                background-color: rgba(0, 0, 0, 0.075);
-                position: absolute;
+        .row {
+            margin-right: 0 !important;
+        }
+        .card {
+            border: 1px solid $C1;
+            box-shadow: 0 1px 2px $C1;
+            padding: 5px;
+            margin-bottom: 10px;
+            width: 390px;
+            height: 300px;
+            margin: 10px;
+            .card-title {
+                background-color: $C2;
                 z-index: 2;
-                text-shadow: $C2 1px 1px, $C2 -1px 1px, $C2 -1px -1px, $C2 1px -1px;
-                span {
-                    vertical-align: middle;
-                    &::selection {
-                        color: $C1;
-                        background-color: rgba(0, 119, 255, 0.479);
+                font-size: 12.5px;
+                width: 245px;
+                border-bottom: solid 1px $C1;
+                border-right: solid 2px $C1;
+                box-shadow: 0 1px 5px $C1;
+            }
+            .card-img-top {
+                z-index: 2;
+                position: absolute;
+                width: 35%;
+                right: 5px;
+                top: 55px;
+                margin: auto auto;
+            }
+            .badge {
+                z-index: 1;
+                height: 100%;
+                position: absolute;
+                width: 150px;
+                top: 0;
+                right: 0;
+            }
+            .generateur {
+                z-index: 2;
+                white-space: nowrap;
+                vertical-align: baseline;
+                height: 20px;
+                position: absolute;
+                width: 150px;
+                top: 25px;
+                right: 0;
+                border: solid 1px $C1;
+                border-left: solid 2px $C1;
+                text-align: center;
+                vertical-align: middle;
+                font-size: 12px;
+                background-color: $C2;
+            }
+            a {
+                z-index: 2;
+                position: absolute;
+                bottom: 5px;
+                left: 0;
+                width: 100%;
+                background-color: $C3;
+                color: $C2;
+                text-align: center;
+                box-shadow: 0 1px 2px $C1;
+                text-decoration: none;
+                &:hover {
+                    bottom: 3px;
+                    box-shadow: 0 1px 0 $C1;
+                    text-shadow: 0 1px 0 $C1;
+                }
+            }
+            .card-body {
+                height: 200px;
+                .card-text {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    bottom: 0;
+                    left: 0;
+                    text-align: center;
+                    height: 260px;
+                    width: 62%;
+                    background-color: rgba(0, 0, 0, 0.075);
+                    position: absolute;
+                    z-index: 2;
+                    text-shadow: $C2 1px 1px, $C2 -1px 1px, $C2 -1px -1px, $C2 1px -1px;
+                    span {
+                        vertical-align: middle;
+                        &::selection {
+                            color: $C1;
+                            background-color: rgba(0, 119, 255, 0.479);
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (min-width: 768px) and (max-width: 915px) {
+    section {
+        width: 65%;
+        margin: auto auto;
+        height: 495px;
+        padding: 10px;
+        overflow-y: scroll;
+        margin-bottom: 25px;
+        &::-webkit-scrollbar {
+            width: 45px;
+        }
+        &::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 5px $C1;
+            border-radius: 10px;
+        }
+        &::-webkit-scrollbar-track-piece {
+            background-image: linear-gradient(90deg, $C3 0%, $C2 55%, $C3 100%);
+            border-radius: 10px;
+        }
+        &::-webkit-scrollbar-thumb {
+            background-image: linear-gradient(90deg, $C3 0%, $C2 55%, $C3 100%);
+            border-radius: 10px;
+            box-shadow: inset 2px 0px 10px $C1;
+            transition: background-image 1.5s;
+            &:hover {
+                background-image: linear-gradient(90deg, $C2 0%, $C3 55%, $C2 100%);
+                box-shadow: inset -2px 0px 10px $C1;
+            }
+        }
+        .row {
+            margin-left: 15%;
+            padding: 0;
+            margin-right: 0;
+        }
+        .card {
+            border: 1px solid $C1;
+            box-shadow: 0 1px 2px $C1;
+            padding: 5px;
+            margin-bottom: 10px;
+            width: 390px;
+            height: 300px;
+            margin: 10px;
+            .card-title {
+                background-color: $C2;
+                z-index: 2;
+                font-size: 12.5px;
+                width: 245px;
+                border-bottom: solid 1px $C1;
+                border-right: solid 2px $C1;
+                box-shadow: 0 1px 5px $C1;
+            }
+            .card-img-top {
+                z-index: 2;
+                position: absolute;
+                width: 35%;
+                right: 5px;
+                top: 55px;
+                margin: auto auto;
+            }
+            .badge {
+                z-index: 1;
+                height: 100%;
+                position: absolute;
+                width: 150px;
+                top: 0;
+                right: 0;
+            }
+            .generateur {
+                z-index: 2;
+                white-space: nowrap;
+                vertical-align: baseline;
+                height: 20px;
+                position: absolute;
+                width: 150px;
+                top: 25px;
+                right: 0;
+                border: solid 1px $C1;
+                border-left: solid 2px $C1;
+                text-align: center;
+                vertical-align: middle;
+                font-size: 12px;
+                background-color: $C2;
+            }
+            a {
+                z-index: 2;
+                position: absolute;
+                bottom: 5px;
+                left: 0;
+                width: 100%;
+                background-color: $C3;
+                color: $C2;
+                text-align: center;
+                box-shadow: 0 1px 2px $C1;
+                text-decoration: none;
+                &:hover {
+                    bottom: 3px;
+                    box-shadow: 0 1px 0 $C1;
+                    text-shadow: 0 1px 0 $C1;
+                }
+            }
+            .card-body {
+                height: 200px;
+                .card-text {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    bottom: 0;
+                    left: 0;
+                    text-align: center;
+                    height: 260px;
+                    width: 62%;
+                    background-color: rgba(0, 0, 0, 0.075);
+                    position: absolute;
+                    z-index: 2;
+                    text-shadow: $C2 1px 1px, $C2 -1px 1px, $C2 -1px -1px, $C2 1px -1px;
+                    span {
+                        vertical-align: middle;
+                        &::selection {
+                            color: $C1;
+                            background-color: rgba(0, 119, 255, 0.479);
+                        }
+                    }
+                }
+            }
+        }
+    }
+}
+
+@media (max-width: 767px) {
+    section {
+        width: 100%;
+        margin: auto auto;
+        height: 495px;
+        padding: 10px;
+        overflow-y: scroll;
+        margin-bottom: 25px;
+        &::-webkit-scrollbar {
+            width: 45px;
+        }
+        &::-webkit-scrollbar-track {
+            box-shadow: inset 0 0 5px $C1;
+            border-radius: 10px;
+        }
+        &::-webkit-scrollbar-track-piece {
+            background-image: linear-gradient(90deg, $C3 0%, $C2 55%, $C3 100%);
+            border-radius: 10px;
+        }
+        &::-webkit-scrollbar-thumb {
+            background-image: linear-gradient(90deg, $C3 0%, $C2 55%, $C3 100%);
+            border-radius: 10px;
+            box-shadow: inset 2px 0px 10px $C1;
+            transition: background-image 1.5s;
+            &:hover {
+                background-image: linear-gradient(90deg, $C2 0%, $C3 55%, $C2 100%);
+                box-shadow: inset -2px 0px 10px $C1;
+            }
+        }
+        .row {
+            margin-left: 15%;
+            padding: 0;
+            margin-right: 0;
+        }
+        .card {
+            border: 1px solid $C1;
+            box-shadow: 0 1px 2px $C1;
+            padding: 5px;
+            margin-bottom: 10px;
+            width: 390px;
+            height: 300px;
+            margin: 10px;
+            .card-title {
+                background-color: $C2;
+                z-index: 2;
+                font-size: 12.5px;
+                width: 245px;
+                border-bottom: solid 1px $C1;
+                border-right: solid 2px $C1;
+                box-shadow: 0 1px 5px $C1;
+            }
+            .card-img-top {
+                z-index: 2;
+                position: absolute;
+                width: 35%;
+                right: 5px;
+                top: 55px;
+                margin: auto auto;
+            }
+            .badge {
+                z-index: 1;
+                height: 100%;
+                position: absolute;
+                width: 150px;
+                top: 0;
+                right: 0;
+            }
+            .generateur {
+                z-index: 2;
+                white-space: nowrap;
+                vertical-align: baseline;
+                height: 20px;
+                position: absolute;
+                width: 150px;
+                top: 25px;
+                right: 0;
+                border: solid 1px $C1;
+                border-left: solid 2px $C1;
+                text-align: center;
+                vertical-align: middle;
+                font-size: 12px;
+                background-color: $C2;
+            }
+            a {
+                z-index: 2;
+                position: absolute;
+                bottom: 5px;
+                left: 0;
+                width: 100%;
+                background-color: $C3;
+                color: $C2;
+                text-align: center;
+                box-shadow: 0 1px 2px $C1;
+                text-decoration: none;
+                &:hover {
+                    bottom: 3px;
+                    box-shadow: 0 1px 0 $C1;
+                    text-shadow: 0 1px 0 $C1;
+                }
+            }
+            .card-body {
+                height: 200px;
+                .card-text {
+                    display: flex;
+                    flex-direction: column;
+                    justify-content: center;
+                    bottom: 0;
+                    left: 0;
+                    text-align: center;
+                    height: 260px;
+                    width: 62%;
+                    background-color: rgba(0, 0, 0, 0.075);
+                    position: absolute;
+                    z-index: 2;
+                    text-shadow: $C2 1px 1px, $C2 -1px 1px, $C2 -1px -1px, $C2 1px -1px;
+                    span {
+                        vertical-align: middle;
+                        &::selection {
+                            color: $C1;
+                            background-color: rgba(0, 119, 255, 0.479);
+                        }
                     }
                 }
             }
