--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -3,6 +3,7 @@ $C2:white;
 $C3:rgba(0, 162, 216, 1);
 @media (min-width: 916px) {
     section {
+        scroll-snap-type: y mandatory;
         width: 95%;
         margin: auto auto;
         height: 495px;
@@ -13,21 +14,22 @@ $C3:rgba(0, 162, 216, 1);
             width: 45px;
         }
         &::-webkit-scrollbar-track {
+            border: 1px solid $C3;
             box-shadow: inset 0 0 5px $C1;
             border-radius: 10px;
         }
         &::-webkit-scrollbar-track-piece {
-            background-image: linear-gradient(90deg, $C3 0%, $C2 55%, $C3 100%);
+            background-color: $C2;
             border-radius: 10px;
+            border: 1px solid $C3;
         }
         &::-webkit-scrollbar-thumb {
-            background-image: linear-gradient(90deg, $C3 0%, $C2 55%, $C3 100%);
+            background-color: $C3;
             border-radius: 10px;
-            box-shadow: inset 2px 0px 10px $C1;
-            transition: background-image 1.5s;
+            box-shadow: inset -2px 0px 10px $C1, inset 0 2px 5px $C1;
             &:hover {
-                background-image: linear-gradient(90deg, $C2 0%, $C3 55%, $C2 100%);
-                box-shadow: inset -2px 0px 10px $C1;
+                background-color: $C3;
+                box-shadow: inset -2px 0px 10px $C1, inset 0 1px 4px $C1;
             }
         }
         .row {
@@ -66,23 +68,8 @@ $C3:rgba(0, 162, 216, 1);
                 top: 0;
                 right: 0;
             }
-            .generateur {
-                z-index: 2;
-                white-space: nowrap;
-                vertical-align: baseline;
-                height: 20px;
-                position: absolute;
-                width: 150px;
-                top: 25px;
-                right: 0;
-                border: solid 1px $C1;
-                border-left: solid 2px $C1;
-                text-align: center;
-                vertical-align: middle;
-                font-size: 12px;
-                background-color: $C2;
-            }
             a {
+                border-radius: 5px;
                 z-index: 2;
                 position: absolute;
                 bottom: 5px;
@@ -112,7 +99,7 @@ $C3:rgba(0, 162, 216, 1);
                     width: 62%;
                     background-color: rgba(0, 0, 0, 0.075);
                     position: absolute;
-                    z-index: 2;
+                    z-index: 1;
                     text-shadow: $C2 1px 1px, $C2 -1px 1px, $C2 -1px -1px, $C2 1px -1px;
                     span {
                         vertical-align: middle;
@@ -139,21 +126,22 @@ $C3:rgba(0, 162, 216, 1);
             width: 45px;
         }
         &::-webkit-scrollbar-track {
+            border: 1px solid $C3;
             box-shadow: inset 0 0 5px $C1;
             border-radius: 10px;
         }
         &::-webkit-scrollbar-track-piece {
-            background-image: linear-gradient(90deg, $C3 0%, $C2 55%, $C3 100%);
+            border: 1px solid $C3;
+            background-color: $C2;
             border-radius: 10px;
         }
         &::-webkit-scrollbar-thumb {
-            background-image: linear-gradient(90deg, $C3 0%, $C2 55%, $C3 100%);
+            background-color: $C3;
             border-radius: 10px;
-            box-shadow: inset 2px 0px 10px $C1;
-            transition: background-image 1.5s;
+            box-shadow: inset -2px 0px 10px $C1, inset 0 2px 5px $C1;
             &:hover {
-                background-image: linear-gradient(90deg, $C2 0%, $C3 55%, $C2 100%);
-                box-shadow: inset -2px 0px 10px $C1;
+                background-color: $C3;
+                box-shadow: inset -2px 0px 10px $C1, inset 0 1px 4px $C1;
             }
         }
         .row {
@@ -194,23 +182,8 @@ $C3:rgba(0, 162, 216, 1);
                 top: 0;
                 right: 0;
             }
-            .generateur {
-                z-index: 2;
-                white-space: nowrap;
-                vertical-align: baseline;
-                height: 20px;
-                position: absolute;
-                width: 150px;
-                top: 25px;
-                right: 0;
-                border: solid 1px $C1;
-                border-left: solid 2px $C1;
-                text-align: center;
-                vertical-align: middle;
-                font-size: 12px;
-                background-color: $C2;
-            }
             a {
+                border-radius: 5px;
                 z-index: 2;
                 position: absolute;
                 bottom: 5px;
@@ -271,17 +244,17 @@ $C3:rgba(0, 162, 216, 1);
             border-radius: 10px;
         }
         &::-webkit-scrollbar-track-piece {
-            background-image: linear-gradient(90deg, $C3 0%, $C2 55%, $C3 100%);
+            border: 1px solid $C3;
+            background-color: $C2;
             border-radius: 10px;
         }
         &::-webkit-scrollbar-thumb {
-            background-image: linear-gradient(90deg, $C3 0%, $C2 55%, $C3 100%);
+            background-color: $C3;
             border-radius: 10px;
-            box-shadow: inset 2px 0px 10px $C1;
-            transition: background-image 1.5s;
+            box-shadow: inset -2px 0px 10px $C1, inset 0 2px 5px $C1;
             &:hover {
-                background-image: linear-gradient(90deg, $C2 0%, $C3 55%, $C2 100%);
-                box-shadow: inset -2px 0px 10px $C1;
+                background-color: $C3;
+                box-shadow: inset -2px 0px 10px $C1, inset 0 1px 4px $C1;
             }
         }
         .row {
@@ -290,6 +263,7 @@ $C3:rgba(0, 162, 216, 1);
             margin-right: 0;
         }
         .card {
+            scroll-snap-align: start;
             border: 1px solid $C1;
             box-shadow: 0 1px 2px $C1;
             padding: 5px;
@@ -322,23 +296,8 @@ $C3:rgba(0, 162, 216, 1);
                 top: 0;
                 right: 0;
             }
-            .generateur {
-                z-index: 2;
-                white-space: nowrap;
-                vertical-align: baseline;
-                height: 20px;
-                position: absolute;
-                width: 150px;
-                top: 25px;
-                right: 0;
-                border: solid 1px $C1;
-                border-left: solid 2px $C1;
-                text-align: center;
-                vertical-align: middle;
-                font-size: 12px;
-                background-color: $C2;
-            }
             a {
+                border-radius: 5px;
                 z-index: 2;
                 position: absolute;
                 bottom: 5px;
@@ -437,4 +396,23 @@ footer {
     background-color: #9062fb;
     color: $C1;
     text-shadow: 0 0 1px $C2;
+}
+
+.generateur {
+    z-index: 2;
+    color: $C2;
+    text-shadow: $C1 1px 1px, $C1 -1px 1px, $C1 -1px -1px, $C1 1px -1px;
+    white-space: nowrap;
+    vertical-align: baseline;
+    height: 20px;
+    position: absolute;
+    width: 150px;
+    top: 25px;
+    right: 0;
+    border: solid 1px $C1;
+    border-left: solid 2px $C1;
+    text-align: center;
+    vertical-align: middle;
+    font-size: 12px;
+    background-image: url("https://i.pinimg.com/originals/90/aa/c3/90aac31c0d76c5a82f78a9be540321fa.gif");
 }
