Correction de la verticalité !

--- a/assets/scss/style.scss
+++ b/assets/scss/style.scss
@@ -7,7 +7,7 @@ $C3:rgba(0, 162, 216, 1);
             scroll-snap-type: y mandatory;
             width: 95%;
             margin: auto auto;
-            height: 495px;
+            height: 80vh;
             padding: 10px;
             overflow-y: scroll;
             margin-bottom: 25px;
@@ -121,7 +121,7 @@ $C3:rgba(0, 162, 216, 1);
         section {
             width: 65%;
             margin: auto auto;
-            height: 495px;
+            height: 80vh;
             padding: 10px;
             overflow-y: scroll;
             margin-bottom: 25px;
@@ -236,7 +236,7 @@ $C3:rgba(0, 162, 216, 1);
         section {
             width: 100%;
             margin: auto auto;
-            height: 495px;
+            height: 80vh;
             padding: 10px;
             overflow-y: scroll;
             margin-bottom: 25px;
