--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@media only screen and (orientation: landscape) and (min-width: 916px) { section { -ms-scroll-snap-type: y mandatory; scroll-snap-type: y mandatory; width: 95%; margin: auto auto; height: 495px; padding: 10px; overflow-y: scroll; margin-bottom: 25px; }
+@media only screen and (orientation: landscape) and (min-width: 916px) { section { -ms-scroll-snap-type: y mandatory; scroll-snap-type: y mandatory; width: 95%; margin: auto auto; height: 80vh; padding: 10px; overflow-y: scroll; margin-bottom: 25px; }
   section::-webkit-scrollbar { width: 45px; }
   section::-webkit-scrollbar-track { border: 1px solid #00a2d8; -webkit-box-shadow: inset 0 0 5px black; box-shadow: inset 0 0 5px black; border-radius: 10px; }
   section::-webkit-scrollbar-track-piece { background-color: white; border-radius: 10px; border: 1px solid #00a2d8; }
@@ -17,7 +17,7 @@
   section .card .card-body .card-text span::-moz-selection { color: black; background-color: rgba(0, 119, 255, 0.479); }
   section .card .card-body .card-text span::selection { color: black; background-color: rgba(0, 119, 255, 0.479); } }
 
-@media only screen and (orientation: landscape) and (min-width: 768px) and (max-width: 915px) { section { width: 65%; margin: auto auto; height: 495px; padding: 10px; overflow-y: scroll; margin-bottom: 25px; }
+@media only screen and (orientation: landscape) and (min-width: 768px) and (max-width: 915px) { section { width: 65%; margin: auto auto; height: 80vh; padding: 10px; overflow-y: scroll; margin-bottom: 25px; }
   section::-webkit-scrollbar { width: 45px; }
   section::-webkit-scrollbar-track { border: 1px solid #00a2d8; -webkit-box-shadow: inset 0 0 5px black; box-shadow: inset 0 0 5px black; border-radius: 10px; }
   section::-webkit-scrollbar-track-piece { border: 1px solid #00a2d8; background-color: white; border-radius: 10px; }
@@ -36,7 +36,7 @@
   section .card .card-body .card-text span::-moz-selection { color: black; background-color: rgba(0, 119, 255, 0.479); }
   section .card .card-body .card-text span::selection { color: black; background-color: rgba(0, 119, 255, 0.479); } }
 
-@media only screen and (orientation: landscape) and (max-width: 767px) { section { width: 100%; margin: auto auto; height: 495px; padding: 10px; overflow-y: scroll; margin-bottom: 25px; }
+@media only screen and (orientation: landscape) and (max-width: 767px) { section { width: 100%; margin: auto auto; height: 80vh; padding: 10px; overflow-y: scroll; margin-bottom: 25px; }
   section::-webkit-scrollbar { width: 45px; }
   section::-webkit-scrollbar-track { -webkit-box-shadow: inset 0 0 5px black; box-shadow: inset 0 0 5px black; border-radius: 10px; }
   section::-webkit-scrollbar-track-piece { border: 1px solid #00a2d8; background-color: white; border-radius: 10px; }
