--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,4 +1,4 @@
-@media only screen and (orientation: landscape) and (min-width: 916px) { section { -ms-scroll-snap-type: y mandatory; scroll-snap-type: y mandatory; width: 95%; margin: auto auto; height: 100vh; padding: 10px; overflow-y: scroll; margin-bottom: 25px; }
+@media only screen and (orientation: landscape) and (min-width: 916px) { section { position: absolute; top: 60px; left: 7.5%; -ms-scroll-snap-type: y mandatory; scroll-snap-type: y mandatory; width: 86%; margin: auto auto; height: 80vh; padding: 50px; overflow-y: scroll; margin-bottom: 25px; }
   section::-webkit-scrollbar { width: 45px; }
   section::-webkit-scrollbar-track { border: 1px solid #00a2d8; -webkit-box-shadow: inset 0 0 5px black; box-shadow: inset 0 0 5px black; border-radius: 10px; }
   section::-webkit-scrollbar-track-piece { background-color: white; border-radius: 10px; border: 1px solid #00a2d8; }
@@ -67,7 +67,7 @@
   .php { background-color: #9062fb; color: black; text-shadow: 0 0 1px white; }
   .generateur { z-index: 1; color: white; text-shadow: black 1px 1px, black -1px 1px, black -1px -1px, black 1px -1px; white-space: nowrap; vertical-align: baseline; height: 20px; position: absolute; width: 150px; top: 25px; right: 0; border: solid 1px black; border-left: solid 2px black; text-align: center; vertical-align: middle; font-size: 12px; background-image: url("https://i.pinimg.com/originals/90/aa/c3/90aac31c0d76c5a82f78a9be540321fa.gif"); } }
 
-@media only screen and (orientation: portrait) and (min-width: 916px) { section { -ms-scroll-snap-type: y mandatory; scroll-snap-type: y mandatory; width: 95%; margin: auto auto; height: 120vw; padding: 10px; overflow-y: scroll; margin-bottom: 25px; }
+@media only screen and (orientation: portrait) and (min-width: 916px) { section { -ms-scroll-snap-type: y mandatory; scroll-snap-type: y mandatory; width: 95%; margin: auto auto; height: 92vh; padding: 10px; overflow-y: scroll; margin-bottom: 25px; }
   section::-webkit-scrollbar { width: 45px; }
   section::-webkit-scrollbar-track { border: 1px solid #00a2d8; -webkit-box-shadow: inset 0 0 5px black; box-shadow: inset 0 0 5px black; border-radius: 10px; }
   section::-webkit-scrollbar-track-piece { background-color: white; border-radius: 10px; border: 1px solid #00a2d8; }
@@ -135,4 +135,6 @@
   .react { background-color: #62dafb; color: white; text-shadow: 0 1px 1px black; }
   .php { background-color: #9062fb; color: black; text-shadow: 0 0 1px white; }
   .generateur { z-index: 1; color: white; text-shadow: black 1px 1px, black -1px 1px, black -1px -1px, black 1px -1px; white-space: nowrap; vertical-align: baseline; height: 20px; position: absolute; width: 150px; top: 25px; right: 0; border: solid 1px black; border-left: solid 2px black; text-align: center; vertical-align: middle; font-size: 12px; background-image: url("https://i.pinimg.com/originals/90/aa/c3/90aac31c0d76c5a82f78a9be540321fa.gif"); } }
+
+.icone { width: 25px; height: 25px; }
 /*# sourceMappingURL=style.css.map */
